--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"
         <meta name="viewport" content="device-width,initial-scale-1.0">
-        <title>KALKULATOR BMI</title>
+        <title>KALKULATOR</title>
         <link rel="stylessheet" href="css\styles.css">
     </head>
     <body>
