--- a/index.html
+++ b/index.html
@@ -2,11 +2,68 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"
-        <meta name="viewport" content="device-width,initial-scale-1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>KALKULATOR</title>
-        <link rel="stylessheet" href="css\styles.css">
+        <link rel="stylesheet" href="css\styles.css">
     </head>
     <body>
+        <main>
+            <display: flex;?
+            <justify-content: space-around;></justify-content:>
+        <!-- Section Form -->
+        <Section>
+            <div>
+                <header>
+                    <h1>Kalkurator BMI</h1>
+                 </header>
+               <article>
+                    <p>Berat badan ideal adalah impian semua orang,Tidak hanya memiliki bentuk tubuh yang menunjang
+                      penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.Bagaimana denganmu?
+                      Yuk,Sekarang hitung di Kalkurator BMI.</p> 
+                </article>
+            </div>
+             <form>
+                <div>
+                    <label form="berat-badan">Berat Badan:</label>
+                    <input id="berat-badan">
+                </div>
+                <button>Hitung BMI</button>
+                <button>Reset</button>
+             </form>
 
+             <div>
+                <header>
+                    <h2>Keunggulan Fitur</h2>
+             </header>
+                <article>
+                    <p>1.Menghitung badan</p>
+                    <p>2.Menentukan berat badan ideal atay tidak.</p>
+                    <p>3. Mempersiapkan penurunan berat badan.</p>
+               </article>
+            </div>
+        </Section>
+        <!-- Section Result -->
+         <section>
+              <header>
+                <h1>Hasil</h1>
+              </header>
+              
+              <!--Hasil kalkulasi-->
+              <div></div>
+              <!--Info dari Hasil-->
+              <article>
+                <p>Hasil diantara 23 dan 25.</p>
+
+                <p>Anda berada dalam kategori overweight atau berat badab berlebih.
+                   Cara terbaik untuk menurunkan berat badan adalah dengan mengatur kalor makanan yang
+                   dikomsusi dan berolahraga.</p>
+                <p>Jika BMI Anda berada dalam kategori ini maka Anda dianjurkan untuk menurunkan berat badan
+                    hingga batas normal. </p>
+              </article>
+         </section>
+         </main>
+         <footer>
+            <span>Made by Caesar </span>
+          </footer>
     </body>
 </html>
