--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main>
-            <display: flex;?
+            <display: flex;></display:>
             <justify-content: space-around;></justify-content:>
         <!-- Section Form -->
         <Section>
@@ -17,8 +17,10 @@
                     <h1>Kalkurator BMI</h1>
                  </header>
                <article>
-                    <p>Berat badan ideal adalah impian semua orang,Tidak hanya memiliki bentuk tubuh yang menunjang
-                      penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.Bagaimana denganmu?
+                    <p>Berat badan ideal adalah impian semua orang,
+                       Tidak hanya memiliki bentuk tubuh yang menunjang
+                      penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.
+                      Bagaimana denganmu?
                       Yuk,Sekarang hitung di Kalkurator BMI.</p> 
                 </article>
             </div>
