--- a/index.html
+++ b/index.html
@@ -18,16 +18,24 @@
                  </header>
                <article>
                     <p>Berat badan ideal adalah impian semua orang,
-                       Tidak hanya memiliki bentuk tubuh yang menunjang
-                      penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.
-                      Bagaimana denganmu?
-                      Yuk,Sekarang hitung di Kalkurator BMI.</p> 
+                    <p>Tidak hanya memiliki bentuk tubuh yang menunjang</p>
+                    <p>penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.</p>
+                    <p>Bagaimana denganmu?</p>
+                    <p> Yuk,Sekarang hitung di Kalkurator BMI.</p> 
                 </article>
             </div>
-             <form>
+             <form class="color-section">
                 <div>
-                    <label form="berat-badan">Berat Badan:</label>
+                    <label form="berat-badan">Berat Badan (Kg):</label>
                     <input id="berat-badan">
+                </div>
+                <div>
+                    <label form="Usia">Usia (tahun):</label>
+                    <input id="usia">
+                </div>
+                <div>
+                    <label form="Tinggi Badan">Tinggi Badan(Cm):</label>
+                    <input id="Tinggi Badan">
                 </div>
                 <button>Hitung BMI</button>
                 <button>Reset</button>
@@ -51,7 +59,11 @@
               </header>
               
               <!--Hasil kalkulasi-->
-              <div></div>
+              <div class="color-section text-center">
+                <h4>Berat Badan Lebih</h4>
+
+                <p id="result">24,7</p>
+              </div>
               <!--Info dari Hasil-->
               <article>
                 <p>Hasil diantara 23 dan 25.</p>
