--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
              <form class="color-section">
                 <div>
                     <label form="berat-badan">Berat Badan (Kg):</label>
-                    <input id="berat-badan">
+                    <input id="berat-badan" type="number"/>
                 </div>
                 <div>
                     <label form="Usia">Usia (tahun):</label>
-                    <input id="usia">
+                    <input id="usia" type"number"/>
                 </div>
                 <div>
                     <label form="Tinggi Badan">Tinggi Badan(Cm):</label>
-                    <input id="Tinggi Badan">
+                    <input id="Tinggi Badan" type="number"/>
                 </div>
                 <button>Hitung BMI</button>
                 <button>Reset</button>
@@ -74,6 +74,22 @@
                 <p>Jika BMI Anda berada dalam kategori ini maka Anda dianjurkan untuk menurunkan berat badan
                     hingga batas normal. </p>
               </article>
+              <button>Konsultasi Ahli Gizi Via Aplikasi</button>
+              <button>Regristrasi online Ahli Gizi</button>
+              <artickel>
+                <p>BMI tidak sepenuhnya mewakili diagnosis menyeluruh dari kesehatan tubuh dan resiko penyakit
+                    Seseorang Anda perlu Konsultasi lebih lanjut mengenai resiko kekhawatiran Anda terkait dengan
+                    berat badan Anda.</p>
+              </artickel>
+              <div>
+                Beberapa penyakit yang berasal dari kegemukan.
+                <p>Diabes</p>
+                <p>Hipertensi</p>
+                <p>Sakit jantung</p>
+                <p>Osteoathieist</p>
+              </div>
+              <button>Konsultasi Ahli Gizi Via Aplikasi</button>
+              <button>Regristrasi online Ahli Gizi</button>
          </section>
          </main>
          <footer>
