--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>KALKULATOR</title>
+        <style>
+            .text center {
+                text-align: center;
+            }
+        </style>
         <link rel="stylesheet" href="css\styles.css">
     </head>
     <body>
@@ -63,16 +68,18 @@
                 <h4>Berat Badan Lebih</h4>
 
                 <p id="result">24,7</p>
+                <p>Anda memiliki Berat Badan Lebih</p>
+                <button>Donwload Hasil BMI</button>
               </div>
               <!--Info dari Hasil-->
               <article>
                 <p>Hasil diantara 23 dan 25.</p>
 
                 <p>Anda berada dalam kategori overweight atau berat badab berlebih.
-                   Cara terbaik untuk menurunkan berat badan adalah dengan mengatur kalor makanan yang
-                   dikomsusi dan berolahraga.</p>
-                <p>Jika BMI Anda berada dalam kategori ini maka Anda dianjurkan untuk menurunkan berat badan
-                    hingga batas normal. </p>
+                   Cara terbaik untuk menurunkan berat badan adalah 
+                   dengan mengatur kalor makanan yang dikomsusi dan berolahraga.
+                   Jika BMI Anda berada dalam kategori ini maka Anda dianjurkan 
+                   untuk menurunkan berat badan hingga batas normal. </p>
               </article>
               <button>Konsultasi Ahli Gizi Via Aplikasi</button>
               <button>Regristrasi online Ahli Gizi</button>
@@ -81,12 +88,12 @@
                     Seseorang Anda perlu Konsultasi lebih lanjut mengenai resiko kekhawatiran Anda terkait dengan
                     berat badan Anda.</p>
               </artickel>
-              <div>
-                Beberapa penyakit yang berasal dari kegemukan.
-                <p>Diabes</p>
-                <p>Hipertensi</p>
-                <p>Sakit jantung</p>
-                <p>Osteoathieist</p>
+              <div >
+                <p class="text-center">Beberapa penyakit yang berasal dari kegemukan.
+                Diabetes
+                Hipertensi
+                Sakit jantung
+                Osteoathieist</p>
               </div>
               <button>Konsultasi Ahli Gizi Via Aplikasi</button>
               <button>Regristrasi online Ahli Gizi</button>
